Add bookId to buying-confirmation